Fix bracket z-index

--- a/pyconkr/static/css/pyconkr.css
+++ b/pyconkr/static/css/pyconkr.css
@@ -693,7 +693,7 @@ input[type=file] {
 
 .bracket_fill, .bracket_line {
     position: absolute;
-    z-index: -1;
+    z-index: 2;
 }
 
 @media (max-width: 768px) {
